Added delete functionality

--- a/moviePage/style.css
+++ b/moviePage/style.css
@@ -78,3 +78,14 @@ li{
     max-width: 100%;
     margin-top: 20px;
 }
+
+.deleteIcon {
+    max-width: 5%;
+    cursor: pointer;
+}
+
+.flexBetween {
+    display: flex;
+    justify-content: space-between;
+    margin: 1em 0;
+}
