--- a/src/app/components/show-card/show-card.component.html
+++ b/src/app/components/show-card/show-card.component.html
@@ -1,1 +1,5 @@
-<p>show-card works!</p>
+<mat-card>
+	<mat-card-title>{{ title }}</mat-card-title>
+	<img mat-card-image src="{{ imageUrl }}" />
+	<mat-card-subtitle>Average rating: {{ averageRating }}</mat-card-subtitle>
+</mat-card>
