--- a/src/app/components/shows-list/shows-list.component.html
+++ b/src/app/components/shows-list/shows-list.component.html
@@ -1,20 +1,9 @@
-<p>shows-list works!</p>
-<app-show-card
-	[title]="'Heartstopper'"
-	[averageRating]="4.9"
-	[imageUrl]="'../../../assets/heartstopper.jpg'"
-></app-show-card>
-<app-show-card
-	[title]="'Stranger things'"
-	[averageRating]="4.7"
-	[imageUrl]="
-		'https://www.cnet.com/a/img/resize/d44839c03c6af88f79b173fbdb6c39ce7aa67ed8/2019/06/16/d854efee-fad3-4dab-a53a-ed0b84410ca0/stranger-things-season-3-kids-eleven-scrunchie.jpg?auto=webp&fit=crop&height=675&width=1200'
-	"
-></app-show-card>
-<app-show-card
-	[title]="'Stranger things'"
-	[averageRating]="4.7"
-	[imageUrl]="
-		'https://media.glamour.com/photos/62bc80948d7bb5efa330ea9d/master/pass/STRANGER%20THINGS%20EDITS%20280622%20default-sq-StrangerThings_StrangerThings4_2_00_09_37_12.jpg'
-	"
-></app-show-card>
+<div class="flexbox">
+	<div *ngFor="let show of shows">
+		<app-show-card
+			[title]="show.title"
+			[averageRating]="show.average_rating"
+			[imageUrl]="show.image_url"
+		></app-show-card>
+	</div>
+</div>
