--- a/src/app/components/show-card/show-card.component.scss
+++ b/src/app/components/show-card/show-card.component.scss
@@ -2,6 +2,7 @@ mat-card {
     border-radius: 15px;
     max-width: max-content;
     max-height: 100%;
+    margin:30px; //Ne radi sa 10%...
 }
 img {
     width: 300px;
