--- a/src/app/components/shows-list/shows-list.component.scss
+++ b/src/app/components/shows-list/shows-list.component.scss
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: left;
 }
 
 app-show-card{
-    margin: 15px;
+    margin: 1px;
 }
