Add show functionality

--- a/src/app/components/shows-container/shows-container.component.html
+++ b/src/app/components/shows-container/shows-container.component.html
@@ -1,1 +1,4 @@
 <app-shows-list [shows]="shows"></app-shows-list>
+<div class="centeredComponent">
+	<app-show-form (add)="onShowAdd($event)"></app-show-form>
+</div>
