--- a/src/app/components/shows-container/shows-container.component.scss
+++ b/src/app/components/shows-container/shows-container.component.scss
@@ -1,4 +1,15 @@
 // Kako dodati pozadinu nekoj komponenti iz scss datoteke te komponente, umjesto iz glavnog stylea?
-// body{
-// 	background-color: darkorchid;
-// }
+:host{
+	background-color: darkorchid;
+    display: inline-block;
+}
+
+.centeredComponent{
+    justify-content: center;
+    width: 30%;
+    min-width: 300px;
+    margin: auto;
+}
+app-show-form {
+    width: 50%;    //Zašto ovo ne radi
+}
