--- a/src/app/components/shows-container/shows-container.component.scss
+++ b/src/app/components/shows-container/shows-container.component.scss
@@ -1,6 +1,6 @@
 // Kako dodati pozadinu nekoj komponenti iz scss datoteke te komponente, umjesto iz glavnog stylea?
 :host{
-	background-color: darkorchid;
+	background-color: rgb(155, 79, 230);
     display: inline-block;
 }
 
