--- a/src/app/components/show-form-component/show-form.component.html
+++ b/src/app/components/show-form-component/show-form.component.html
@@ -10,7 +10,7 @@
 		</mat-form-field>
 		<mat-form-field>
 			<mat-label>Description</mat-label>
-			<textarea [(ngModel)]="description" name="description" matInput type="text"></textarea>
+			<textarea [(ngModel)]="description" name="description" matInput type="text" rows="4"></textarea>
 		</mat-form-field>
 		<div class="centeredComponent">
 			<button mat-raised-button type="submit" color="primary">Add show</button>
