--- a/src/app/components/show-card/show-card.component.html
+++ b/src/app/components/show-card/show-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
 	<mat-card-title>{{ title }}</mat-card-title>
 	<img mat-card-image src="{{ imageUrl || placeholderURL }}" />
-	<mat-card-subtitle>Average rating: {{ averageRating }}</mat-card-subtitle>
+	<mat-card-subtitle> Rating: <app-rating [avgRating]="averageRating"></app-rating> </mat-card-subtitle>
 </mat-card>
