--- a/src/app/components/shows-list/shows-list.component.html
+++ b/src/app/components/shows-list/shows-list.component.html
@@ -4,5 +4,6 @@
 		[title]="show.title"
 		[averageRating]="show.averageRating"
 		[imageUrl]="show.imageUrl"
+		[routerLink]="'/show/' + show.uuid"
 	></app-show-card>
 </div>
