Some design improvements

--- a/src/app/components/shows-container/shows-container.component.html
+++ b/src/app/components/shows-container/shows-container.component.html
@@ -1,4 +1,6 @@
-<app-shows-list [shows]="shows"></app-shows-list>
-<div class="centeredComponent">
-	<app-show-form (add)="onShowAdd($event)"></app-show-form>
+<div class="paddingWrapper">
+	<app-shows-list [shows]="shows"></app-shows-list>
+	<div class="centeredComponent paddingWrapper">
+		<app-show-form (add)="onShowAdd($event)"></app-show-form>
+	</div>
 </div>
