--- a/src/app/components/shows-container/shows-container.component.scss
+++ b/src/app/components/shows-container/shows-container.component.scss
@@ -4,6 +4,9 @@
     display: inline-block;
 }
 
+.paddingWrapper{
+    padding: 3em 0 5em 0;
+}
 .centeredComponent{
     justify-content: center;
     width: 30%;
