--- a/src/app/pages/show-details/show-details.component.scss
+++ b/src/app/pages/show-details/show-details.component.scss
@@ -3,7 +3,9 @@
     background-size: 20%;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    padding-top: 3em;
 }
 
 
