Added descriptions, switched to rating component

--- a/src/app/pages/show-details/show-details.component.html
+++ b/src/app/pages/show-details/show-details.component.html
@@ -11,7 +11,7 @@
 				</div>
 				<br />
 				<div class="showDescription" id="showRating">
-					<span>Average rating: {{ avgRating || 'No ratings' }}</span>
+					<span>Average rating: <app-rating [avgRating]="avgRating"></app-rating></span>
 				</div>
 			</div>
 		</div>
