Added cursor pointer, fixed placeholder img logic

--- a/src/app/components/navigation/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation/navigation.component.scss
@@ -15,6 +15,7 @@
     text-align: center;
     border: 1px solid dimgrey;
     border-left: none;
+    cursor: pointer;
 }
 .finder{
     display: inline-block;
