--- a/src/app/components/shows-list/shows-list.component.html
+++ b/src/app/components/shows-list/shows-list.component.html
@@ -1,9 +1,9 @@
 <div class="flexbox">
-	<app-show-card
-		*ngFor="let show of shows"
-		[title]="show.title"
-		[averageRating]="show.averageRating"
-		[imageUrl]="show.imageUrl"
-		[routerLink]="'/show/' + show.uuid"
-	></app-show-card>
+	<a *ngFor="let show of shows" [routerLink]="'/show/' + show.uuid">
+		<app-show-card
+			[title]="show.title"
+			[averageRating]="show.averageRating"
+			[imageUrl]="show.imageUrl"
+		></app-show-card>
+	</a>
 </div>
