--- a/src/app/components/shows-list/shows-list.component.scss
+++ b/src/app/components/shows-list/shows-list.component.scss
@@ -2,9 +2,19 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
 }
 
+a{
+    display: inline;
+    width: max-content;
+    margin: 1em 5% 1em 5%;
+    text-decoration: none;
+    color: unset;
+}
 app-show-card{
     cursor: pointer;
+    display: block;
+    box-sizing: border-box;
+    width: 300px;
 }
