--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -3,10 +3,9 @@
     background-size: 20%;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    // height: 100%;
-    min-height: max-content; //Bez paddinga ne radi dobro s developer toolsima - kako napraviti height=max(100%, max-content)?
+    height: 100%;
     width: 100%;
-    padding: 3em 0 7em 0;
+    padding-top: 3em;
 }
 
 
