--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -25,7 +25,7 @@
 	<input id="postButton" type="button" value="Post" (click)="onButtonClick($event)" />
 	<ul class="reviewsList" *ngIf="reviews.length !== 0">
 		<li *ngFor="let review of reviews">
-			<app-single-review [review]="review"></app-single-review>
+			<app-single-review [review]="review" (reviewDelete)="onDeleteReview($event)"></app-single-review>
 		</li>
 	</ul>
 </div>
