--- a/src/app/components/rating/rating.component.scss
+++ b/src/app/components/rating/rating.component.scss
@@ -1,3 +1,4 @@
+@use "../../variables.scss" as variables;
 .stars{
     display: inline-block;
     text-align: left;
@@ -7,14 +8,14 @@
 }
 .yellowStars{
     height: 100%;
-    background-image: url("../../../assets/yellowStar.png");
+    background-image: url(variables.$yellow_star_path);
     background-size: 20px;
     background-repeat: repeat-x;
 }
 .greyStars{
     height: 100%;
     width: 100px;
-    background-image: url("../../../assets/greyStar.png");
+    background-image: url(variables.$grey_star_path);
     background-size: 20px;
     background-repeat: repeat-x;
 }
