--- a/src/app/components/show-card/show-card.component.scss
+++ b/src/app/components/show-card/show-card.component.scss
@@ -1,5 +1,7 @@
+@use "../../variables.scss" as variables;
+
 mat-card {
-    color: blueviolet;
+    color: variables.$secondary_color;
     text-align: center;
     border-radius: 15px;
     max-width: max-content;
