--- a/src/app/components/navigation/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation/navigation.component.scss
@@ -7,6 +7,7 @@ a{
     background-color: variables.$secondary_color;
     color: white;
     font-weight: 500;
+    min-width: 750px;
 }
 .menus{
     display: inline-block;
