Changed subscriptions to async pipes, changed to Observable<Show[]>

--- a/src/app/pages/all-shows/all-shows.component.html
+++ b/src/app/pages/all-shows/all-shows.component.html
@@ -1,1 +1,1 @@
-<app-shows-container [shows]="shows"></app-shows-container>
+<app-shows-container [shows]="(shows$ | async) || []"></app-shows-container>
