--- a/src/app/pages/top-rated-shows/top-rated-shows.component.html
+++ b/src/app/pages/top-rated-shows/top-rated-shows.component.html
@@ -1,1 +1,1 @@
-<app-shows-container [shows]="shows"></app-shows-container>
+<app-shows-container [shows]="(shows$ | async) || []"></app-shows-container>
