--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -28,3 +28,10 @@ button{
     color: white;
     width: 100%
 }
+
+.error{
+    background-color: darkred;
+    color: white;
+    border-radius: 5px;
+    padding: 0.5em;
+}
