--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,4 +1,5 @@
 @use "../../variables.scss" as variables;
+@use "/src/styles.scss" as s;
 
 mat-card{
     min-height: 300px;
@@ -20,13 +21,14 @@ mat-label{
 }
 
 p{
+    background-color: s.$dark-purple;
     margin: 1em 0;
 }
 button{
     margin-top: 1em;
     background-color: variables.$secondary_color;
     color: white;
-    width: 100%
+    width: 100%;
 }
 
 .error{
