--- a/src/app/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/layouts/auth-layout/auth-layout.component.scss
@@ -1,7 +1,7 @@
-@use "../../variables.scss" as variables;
+@use "/src/styles.scss" as s;
 
 .bgnd{
-    background-color: variables.$primary_color;
+    background-color: s.$dark-purple;
     height: 100vh;
     width: 100vw;
 }
