--- a/src/app/components/rating/rating.component.scss
+++ b/src/app/components/rating/rating.component.scss
@@ -24,7 +24,12 @@
     display: inline-block;
 }
 .container{
-    display: inline-block;
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
     height: 100%;
+}
+
+.mat-icon{
+    display: inline;
+    height: 50%;
 }
