--- a/src/app/components/show-card/show-card.component.html
+++ b/src/app/components/show-card/show-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-	<mat-card-title>{{ title }}</mat-card-title>
 	<img mat-card-image [src]="imageUrl || placeholderURL" (error)="switchLink($event)" />
-	<mat-card-subtitle> Rating: <app-rating [avgRating]="averageRating"></app-rating> </mat-card-subtitle>
+	<mat-card-title>{{ title }}</mat-card-title>
+	<mat-card-subtitle> <app-rating [avgRating]="averageRating"></app-rating> </mat-card-subtitle>
 </mat-card>
