--- a/src/app/components/shows-container/shows-container.component.html
+++ b/src/app/components/shows-container/shows-container.component.html
@@ -1,6 +1,6 @@
 <div class="paddingWrapper">
 	<app-shows-list [shows]="shows"></app-shows-list>
-	<div class="centeredComponent paddingWrapper">
+	<!-- <div class="centeredComponent paddingWrapper">
 		<app-show-form (add)="onShowAdd($event)"></app-show-form>
-	</div>
+	</div> -->
 </div>
