--- a/src/app/components/shows-list/shows-list.component.scss
+++ b/src/app/components/shows-list/shows-list.component.scss
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 a{
     display: inline;
     width: max-content;
-    margin: 1em 5% 1em 5%;
+    margin: 1em;
     text-decoration: none;
     color: unset;
 }
@@ -16,5 +16,5 @@ app-show-card{
     cursor: pointer;
     display: block;
     box-sizing: border-box;
-    width: 300px;
+    width: 240px;
 }
