--- a/src/app/pages/show-details/show-details.component.html
+++ b/src/app/pages/show-details/show-details.component.html
@@ -1,21 +1,20 @@
 <div class="bgnd">
 	<div class="app">
 		<ng-container *ngIf="show$ | async as show">
-			<div class="showCard">
-				<div class="showImage">
-					<img src="{{ show.imageUrl }}" />
-				</div>
+			<mat-card>
+				<img src="{{ show.imageUrl }}" />
 				<div class="showData">
-					<div class="showTitle">{{ show.title }}</div>
+					<div class="titleRating">
+						<mat-card-title>{{ show.title }}</mat-card-title>
+						<div id="showRating">
+							<app-rating [avgRating]="show.averageRating"></app-rating>
+						</div>
+					</div>
 					<div class="showDescription">
 						{{ show.description }}
 					</div>
-					<br />
-					<div class="showDescription" id="showRating">
-						<span>Average rating: <app-rating [avgRating]="show.averageRating"></app-rating></span>
-					</div>
 				</div>
-			</div>
+			</mat-card>
 			<app-reviews
 				[reviews]="reviews"
 				(newReview)="storeNewReview($event)"
