--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -2,7 +2,7 @@
     position: absolute;
     left: 25%;
     top: 0%;
-    width: 75vw;
+    // width: 75vw;
     max-width: 75vw;
     height: 100%;
 }
