--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -59,7 +59,8 @@ li{
     color: white;
     border-radius: 24px;
     padding: 2em;
-    margin-top: 24px;
+    margin: 24px 24px 0 0;
+    box-sizing: border-box;
     width: 100%;
 }
 
