Cleanup, some bugfixes

--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -123,3 +123,11 @@ li{
     text-align: right;
     width: 50%;
 }
+
+.colorStar{
+    color: s.$light_purple;
+}
+
+.whiteStar{
+    color: white;
+}
