--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
-<div class="rest" id="rest" [style.width.px]="calcWidth()">
+<div class="rest" id="rest" [style.width.px]="calcWidth()" (window:resize)="onResize()">
 	<router-outlet></router-outlet>
 </div>
