--- a/src/app/pages/show-details/show-details.component.scss
+++ b/src/app/pages/show-details/show-details.component.scss
@@ -14,10 +14,11 @@
     width: 100%;
     min-width: 400px;
     margin: auto;
+    padding-bottom: 5em;
 }
 
 img{
-    max-height: 500px;
+    max-height: 450px;
     object-fit: cover;
     width: 100%;
     border-radius: 15px 15px 0px 0px;
